--- a/projects/bounty-hunter/server/package.json
+++ b/projects/bounty-hunter/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mongoose": "^5.2.15",
     "morgan": "^1.9.0",
     "uuid": "^3.2.1"
   }
