--- a/projects/utah-trails/server/package.json
+++ b/projects/utah-trails/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.1.2"
   }
 }
